Move the readme update into a separate workflow.
Also use the bypass-protection app to be able to push directly to main.

--- a/.github/workflows/sign.yml
+++ b/.github/workflows/sign.yml
@@ -1,7 +1,9 @@
 name: sign
 
 on:
-  workflow_dispatch
+  workflow_dispatch:
+  release:
+    types: [published]
 
 jobs:
   build-windows-executables:
