--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -79,7 +79,7 @@ jobs:
           fi
 
       - name: Sign the executable (macOS)
-        if: env.SIGN_MACOS == 'true'
+        if: env.SIGN_MACOS == 'true' && runner.os == 'macOS'
         uses: toitlang/action-macos-sign-notarize@567fcd7c0b89e1b4d0fbc5132cce6e56224db1b7 # v1.2.0
         with:
           certificate: ${{ secrets.MACOS_CERTIFICATE }}
