--- a/.github/workflows/readme.yml
+++ b/.github/workflows/readme.yml
@@ -35,6 +35,7 @@ jobs:
         with:
           fetch-depth: 0
           token: ${{ steps.app-token.outputs.token }}
+          ref: main
 
       - name: Update the README
         run: |
