--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,6 +48,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Install Toit
         uses: toitlang/action-setup@v1
@@ -73,8 +75,10 @@ jobs:
       - name: README check
         if: runner.os == 'Linux'
         run: |
-          if [[ -n $(git diff --name-only main..HEAD README.md) ]]; then
-            echo "README.md was updated. Please update README.md.in instead."
+          # Requires the checkout to be not shallow.
+          BASE_COMMIT=$(git merge-base HEAD origin/main)  # Find the original split point.
+          if ! git diff --quiet $BASE_COMMIT -- README.md; then
+            echo "::error::README.md was modified in this branch compared to its original base commit."
             exit 1
           fi
 
